# codelia

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  RULES.md  biome.json  package.json  skills-lock.json  tsconfig.base.json
crates/tui/: AGENTS.md  Cargo.toml
crates/tui/src/: app.rs  attachments.rs  clipboard.rs  input.rs  insert_history.rs  main.rs  main_tests.rs  markdown.rs  model.rs  parse.rs  runtime.rs  ui.rs
crates/tui/src/app/: AGENTS.md  log_wrap.rs  mod.rs  theme.rs
crates/tui/src/app/app_state/: methods.rs  mod.rs  tests.rs
crates/tui/src/app/handlers/: AGENTS.md  command.rs  confirm.rs  mod.rs  panels.rs  theme.rs
crates/tui/src/app/handlers/command/: bang.rs  prompt.rs  queue.rs  slash.rs
crates/tui/src/app/handlers/runtime_response/: AGENTS.md  client_tools.rs  context_inspect.rs  formatters.rs  lane.rs  mcp.rs  mod.rs  model.rs  panel_builders.rs  parsed_output.rs  session.rs  (+3 more)
crates/tui/src/app/markdown/: mod.rs
crates/tui/src/app/render/: AGENTS.md  inline.rs  mod.rs
crates/tui/src/app/runtime/: client.rs  mod.rs  parser.rs
crates/tui/src/app/state/: AGENTS.md  mod.rs  render.rs
crates/tui/src/app/util/: mod.rs  perf.rs
crates/tui/src/app/view/: AGENTS.md  mod.rs  theme.rs
crates/tui/src/entry/: AGENTS.md  RULES.md  bootstrap.rs  cli.rs  mod.rs  run_loop.rs  terminal.rs
crates/tui/src/event_loop/: AGENTS.md  RULES.md  input.rs  mod.rs  runtime.rs
crates/tui/src/event_loop/runtime/: AGENTS.md  RULES.md  panel_builders.rs  response_dispatch.rs
crates/tui/src/handlers/: command.rs  mod.rs  panels.rs
(+313 files in other folders)
