[package]
name = "codelia-tui"
version = "0.1.56"
edition = "2021"

[[bin]]
name = "codelia-tui"
path = "src/main.rs"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
unicode-width = "0.1"
arboard = "3.6.1"
base64 = "0.22"
png = "0.18"
similar = "2.7"
syntect = "5.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[dev-dependencies]
vt100 = "0.16"
